--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -3,5 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='scripts/bootstrap/css/bootstrap.min.css')
+    
+    script(src='scripts/jquery/jquery.min.js')
+    script(src='scripts/angular/angular.min.js')
+    script(src='scripts/bootstrap/js/bootstrap.min.js')
+    
   body
     block content
