--- a/api/public/stylesheets/style.css
+++ b/api/public/stylesheets/style.css
@@ -1,8 +1,9 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+.btn {
+  margin-right: 5px;
 }
 
-a {
-  color: #00B7FF;
+.well {
+  margin-top: 15px;
 }
+
