--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -1,13 +1,23 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    
     title= title
+    
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='scripts/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/lumin.bootstrap.min.css')
     
     script(src='scripts/jquery/jquery.min.js')
     script(src='scripts/angular/angular.min.js')
     script(src='scripts/bootstrap/js/bootstrap.min.js')
     
+    block pagescripts
+    
   body
-    block content
+    .container
+      block content
+
