--- a/api/views/index.jade
+++ b/api/views/index.jade
@@ -6,18 +6,22 @@ block pagescripts
 
 
 block content
-  h1= title
+  h1
+    span.glyphicon.glyphicon-fire
+    = ' ' + title 
+  
   
   hr/
   
   div(ng-app='app')
     div(ng-controller='kettlecontroller as kettle')
       div
-        button(type='button', ng-click='updateKettleStatus()', class="btn btn-default") Refresh
-        button(type='button', ng-click='turnKettleOn()', class="btn btn-success") Turn on
-        button(type='button', ng-click='turnKettleOff()', class="btn btn-danger") Turn off
+        //button(type='button', ng-click='updateKettleStatus()', class="btn btn-default") Refresh
+        button(type='button', ng-click='turnKettleOn()', class="btn btn-success") Turn Kettle On
+        button(type='button', ng-click='turnKettleOff()', class="btn btn-danger") Turn Kettle Off
       
       div
+        h3 Status
         div.well {{kettleStatus}}
 
 
