--- a/api/views/index.jade
+++ b/api/views/index.jade
@@ -7,51 +7,67 @@ block pagescripts
 
 
 block content
-  h1
-    span.glyphicon.glyphicon-fire
-    = ' ' + title 
-  
-  
-  hr/
-  
   div(ng-app='app')
+  
     div(ng-controller='kettlecontroller as kettle')
-      div
-        button(type='button', ng-click='turnKettleOn()', ng-disabled='kettleOn' class="btn btn-success") Turn Kettle On
-        button(type='button', ng-click='turnKettleOff()', ng-disabled='!kettleOn' class="btn btn-danger") Turn Kettle Off
-        
-      br/
-          
-      div
-        h3 Kettle Status
-        
-      hr/  
+      h1
+        span.glyphicon.glyphicon-fire(ng-class="{ 'text-warning': kettleOn }")
+        = ' ' + title 
+    
+      div.row
       
-      div
-        h4 On
-        div(ng-if='kettleOn')
-            strong 
-                span.text-success Yes
-        div(ng-if='!kettleOn')
-            strong
-                span.text-danger No
-        
-      div
-        h4 Tempurature (todo)
-        div.progress(class='progress-striped')
-            div.progress-bar(class='progress-bar-danger' style='width: 80%')
+        div.col-md-8
             
-      div
-        h4 Water Level (todo)
-        div.progress(class='progress-striped')
-            div.progress-bar(class='progress-bar-info' style='width: 30%')
-
-      br/
-      br/
-      br/
-         
-      div
-        h4 Debug
-        div.well(class='well-sm') {{kettleStatus}}
+            div
+                h3 Kettle Status
+                
+            hr/  
+            
+            div(ng-if='kettleConnected')
+                div
+                    h4 Turned On?
+                    
+                    div(ng-if='kettleOn')
+                        strong 
+                            span.text-danger Yes 
+                            = ' '
+                            span.text-warning.glyphicon.glyphicon-fire
+                            
+                    div(ng-if='!kettleOn')
+                        strong
+                            span.text-primary No
+                    
+                div
+                    h4 Tempurature
+                    progressbar(max="110" value="kettleTemp" type='{{kettleTempState}}' ng-class="{ 'progress-striped active': kettleOn }")
+                        b {{kettleTemp}}°C
+                        
+                div
+                    h4 Water Level
+                    progressbar(max="100" value="kettleLevel" type='info' ng-class="{ 'progress-striped active': kettleOn }")
+                        b {{kettleLevel}}%
+                            
+               
+                    
+            div(ng-if='!kettleConnected')
+                strong 
+                    span.text-warning No kettle connected 
+               
+            br/
+            div
+                h5 Debug
+                div.well.well-sm {{kettleStatus}}
+            
+        div.col-md-4
+          
+            div(ng-if='kettleConnected')
+                div
+                    h3 Kettle Actions
+                    
+                hr/  
+            
+                div
+                    button.btn.btn-danger(type='button', ng-click='turnKettleOn()', ng-disabled='kettleOn') Turn On
+                    button.btn.btn-primary(type='button', ng-click='turnKettleOff()', ng-disabled='!kettleOn') Turn Off
 
 
