--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -9,7 +9,7 @@ html
     
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='scripts/bootstrap/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/lumin.bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/themes/sandstone.bootstrap.min.css')
     
     script(src='scripts/jquery/jquery.min.js')
     script(src='scripts/angular/angular.min.js')
